# DesignPatterns

./: README.md
BehavioralPatterns/ObserverPattern/: CMakeLists.txt  main.cpp
BehavioralPatterns/ObserverPattern/BasicObserverPattern/: CMakeLists.txt  ConcreteSubscriber.cpp
BehavioralPatterns/ObserverPattern/BasicObserverPattern/include/: Publisher.h  Subscriber.h
BehavioralPatterns/ObserverPattern/GuruObserverPattern/: CMakeLists.txt  Editor.cpp  EmailAlertsListener.cpp  EventManager.cpp  LoggingListener.cpp
BehavioralPatterns/ObserverPattern/GuruObserverPattern/include/: EmailAlertsListener.h  EventListeners.h  EventManager.h  LoggingListener.h
BehavioralPatterns/StrategyPattern/: main.cpp
BehavioralPatterns/StrategyPattern/context/: CMakeLists.txt  context.cpp  multiply_strategy.cpp  strategy.cpp
BehavioralPatterns/VisitorPattern/Application/: Application.cpp  CMakeLists.txt
BehavioralPatterns/VisitorPattern/Shape/: CMakeLists.txt  Circle.cpp  (+1 more)
FactoryPattern/: CMakeLists.txt  main.cpp
FactoryPattern/dialog/: CMakeLists.txt  button.h  dialog.cpp  htmlbutton.cpp  htmlbutton.h  windowsbutton.cpp  windowsbutton.h  windowsdialog.cpp  windowsdialog.h
FactoryPattern/logistics/: logistics.cpp  logistics.h  roadlogistics.h  sealogistics.cpp  sealogistics.h  ship.cpp  ship.h  transport.cpp  truck.h
ObserverPattern/BasicObserverPattern/: Publisher.cpp  Subscriber.cpp
StrategyPattern/: CMakeLists.txt
StrategyPattern/context/: add_strategy.cpp  subtract_strategy.cpp
VisitorPattern/: CMakeLists.txt  main.cpp
VisitorPattern/Shape/: AreaCalculator.cpp
(+21 files in other folders)
